fix: removed hover on scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,6 @@ h1, h2, h3, h6 {
     background-color: #ffffff;
 }
 
-::-webkit-scrollbar:hover {
-    cursor: pointer;
-}
-
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(180deg, #6c839c, #273f54);
     -webkit-border-radius: 10px;
